2011-03-24  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        new-run-webkit-tests: clean up worker model defaults. This
        changes the default behavior to 'threads' instead of
        'old-threads', and clarifies that chromium-win-* and
        chromium-mac-leopard are exceptions.

        https://bugs.webkit.org/show_bug.cgi?id=56971

        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/chromium_linux.py:
        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
        * Scripts/webkitpy/layout_tests/port/chromium_win.py:
        * Scripts/webkitpy/layout_tests/port/test.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2011-03-23  Leandro Gracia Gil  <leandrogracia@chromium.org>

        Reviewed by Darin Adler.

        Media Stream API: fix the order of the options in build-webkit.
        https://bugs.webkit.org/show_bug.cgi?id=56949

        Fix the order of the options in build-webkit.

        * Scripts/build-webkit:

2011-03-23  Adam Klein  <adamk@chromium.org>

        Reviewed by Mihai Parparita.

        Add an option to new-run-webkit-httpd to allow overriding the location of LayoutTests directory
        https://bugs.webkit.org/show_bug.cgi?id=56884

        This option will be utilized by Chromium's ui_tests to allow
        referencing js-test-resources from a layout test over HTTP.

        * Scripts/new-run-webkit-httpd:
        Added --layout_tests_dir option.
        * Scripts/webkitpy/layout_tests/port/http_server.py:
        Plumbed through as layout_tests_dir param.

2011-03-23  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Mihai Parparita.

        new-run-webkit-tests: run tests in ascending alphabetical order per
        dir. This is a second attempt at the fix; the first attempt, in 
        r81597, broke the behavior on the old-inline and old-threads
        worker models.
